# 2d-feature-tracking

./: .gitignore  CMakeLists.txt  README.md  Statistics_Visualizations.ipynb
data/keypoints/: AKAZE_keypoints_number.txt  BRISK_keypoints_number.txt  FAST_keypoints_number.txt  HARRIS_keypoints_number.txt  ORB_keypoints_number.txt  SHITOMASI_keypoints_number.txt  SIFT_keypoints_number.txt
data/matches/: AKAZE_ORB_DES_BINARY_MAT_BF_SEL_NN_matches.txt  BRISK_FREAK_DES_BINARY_MAT_BF_SEL_NN_matches.txt  BRISK_ORB_DES_BINARY_MAT_BF_SEL_NN_matches.txt  FAST_ORB_DES_BINARY_MAT_BF_SEL_NN_matches.txt  HARRIS_BRISK_DES_BINARY_MAT_BF_SEL_NN_matches.txt  ORB_BRISK_DES_BINARY_MAT_BF_SEL_NN_matches.txt  ORB_FREAK_DES_BINARY_MAT_BF_SEL_NN_matches.txt  ORB_SIFT_DES_HOG_MAT_BF_SEL_NN_matches.txt  SHITOMASI_SIFT_DES_HOG_MAT_BF_SEL_NN_matches.txt  SIFT_BRIEF_DES_BINARY_MAT_BF_SEL_NN_matches.txt  SIFT_BRISK_DES_BINARY_MAT_BF_SEL_NN_matches.txt  SIFT_FREAK_DES_BINARY_MAT_BF_SEL_NN_matches.txt
data/timings/descriptors/: AKAZE_descriptor_timings.txt  BRIEF_descriptor_timings.txt  BRISK_descriptor_timings.txt  FREAK_descriptor_timings.txt  ORB_descriptor_timings.txt  SIFT_descriptor_timings.txt
data/timings/detectors/: AKAZE_detector_timings.txt  BRISK_detector_timings.txt  FAST_detector_timings.txt  HARRIS_detector_timings.txt  ORB_detector_timings.txt  SHITOMASI_detector_timings.txt  SIFT_detector_timings.txt
src/: CircularBuffer.hpp  MidTermProject_Camera_Student.cpp  dataStructures.h  matching2D.hpp  matching2D_Student.cpp
test/: data_buffer_test.cpp
